[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Player/fight.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/blackground/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/img/Background.jpg" type="Texture" id=5]
[ext_resource path="res://src/menu/Control.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/menu/Control.gd" type="Script" id=7]

[node name="fight" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.67, 0.68 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInterFace" type="CanvasLayer" parent="."]

[node name="Control" parent="UserInterFace" instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" parent="." instance=ExtResource( 2 )]
speed = 400

[node name="Player2" parent="." instance=ExtResource( 4 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
